# Linux_Project

./: perf.data
.github/: copilot-instructions.md
.github/prompts/: code_read_sop.prompt.md  htoc.prompt.md
CoreX/: CMakeLists.txt  README.md  build.sh
CoreX/apps/: BUG_BOOK.md
CoreX/src/log/: my_log.cpp  my_log.hpp
CoreX/src/net/: Acceptor.cpp  Acceptor.hpp  Buffer.cpp  Buffer.hpp  Channel.cpp  Channel.hpp  EventLoop.cpp  EventLoop.hpp  EventLoopThread.cpp  EventLoopThread.hpp  EventLoopThreadPool.cpp  EventLoopThreadPool.hpp  HeapTimer.cpp  HeapTimer.hpp  Poller.cpp  Poller.hpp  Socket.cpp  Socket.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp
CoreX/tests/: Test_EchoServer_README.md  Test_EchoSever.cpp  test_net_integration.cpp  test_net_integration.md  timeout_server_test.cpp
Exec/: main  makefile
Exec/test/: main.cpp
Log/: main  main_debug
Log/inc/: log.hpp
Log/log/: log.txt.DEBUG  log.txt.ERROR  log.txt.FATAL  log.txt.INFO  log.txt.WARNING
Log/test/: main.cpp
MuchFile/: makefile
MyProcess_Poll/: main
MyProcess_Poll/inc/: Task.hpp
MyProcess_Poll/test/: main.cpp
Myfile/: main  makefile  test1.txt  test2.txt
Myfile/inc/: Myfile.hpp
Myfile/src/: Myfile.cpp
Myfile/test/: main.cpp
Myprocess/: makefile  process
Myprocess/inc/: processbar.h
Myprocess/src/: processbar.cpp
Myprocess/test/: main.cpp
Pid_ctrl/: main
Pid_ctrl/test/: main.cpp
Pid_demo/: Pid  makefile  pid.cpp
Process/: makefile  process
Process/inc/: processbar.h
Process/src/: processbar.cpp
Process/test/: main.cpp
Process_Poll/: main_debug  makefile
Process_Poll/inc/: Task.hpp
Process_Poll/test/: main.cpp
Redirect/: main  main_debug
Redirect/test/: main.cpp
Shell/: main  main_debug  makefile
Shell/src/: shell.cpp
Shell/test/: main.cpp
Shm_Process/: makefile  processa  processa_debug  processb  processb_debug
Shm_Process/inc/: comm.hpp
Shm_Process/test/: processa.cpp  processb.cpp
Singal/: core  main_debug
Singal/test/: main.cpp
Timer/test/: Timer  Timer.cpp  makefile
Tinywebsocket/: Test_buffer  Test_buffer_debug  Test_log  Test_log_asan  Test_log_debug  gen_flamegraph.sh  makefile  perf.data
Tinywebsocket/exe/: Test_buffer  Test_buffer_debug  Test_log  (+5 more)
(+35 files in other folders)
